--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,13 @@ description: A new Flutter project.
 
 dependencies:
   dribbble_client: 0.1.0
-  rxdart: 0.15.0
+  rxdart: 0.16.0
   sealed_unions: 2.0.0
-  flutter_stream_friends: 0.6.2
+  flutter_stream_friends: 0.7.0
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+  flutter_staggered_grid_view: "^0.1.0"
+  transparent_image: 0.1.0
 
 dev_dependencies:
   flutter_test:
