--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,19 @@ name: mvi_sealed_unions
 description: A new Flutter project.
 
 dependencies:
-  dribbble_client: 0.1.0
-  rxdart: 0.16.0
+  giphy_client: 0.0.1
+  rxdart: ^0.16.6
   sealed_unions: 2.0.0
-  flutter_stream_friends: 0.7.0
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: "^0.1.0"
+  flutter_staggered_grid_view: "^0.1.3"
   transparent_image: 0.1.0
+  after_layout: "^1.0.2"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
+  flutter_stetho: 0.1.1
 
 # The following section is specific to Flutter.
 flutter:
@@ -43,10 +40,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Joystix
+      fonts:
+        - asset: assets/fonts/joystix_monospace.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
